[project]
name = "fastapi-video-hosting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.117.1",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.10",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "python-semantic-release>=10.4.1",
    "ruff>=0.12.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP","B"]
ignore = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

# Игнорим только внешние либы, где нет тайпингов
[[tool.mypy.overrides]]
module = [
    "alembic",
    "alembic.*",
    "uvicorn.*",
    "starlette.*",
    "fastapi.*",
]
ignore_missing_imports = true

[tool.semantic_release]
branch = "main"                 # релизы только из main
tag_format = "v{version}"       # v1.2.3
changelog_file = "CHANGELOG.md" # вести файл в корне
version_variable = []           # версию в коде не трогаем
upload_to_pypi = false
build_command = ""

